--- a/roles/nginx/defaults/main.yaml
+++ b/roles/nginx/defaults/main.yaml
@@ -9,3 +9,14 @@ nx_namespace: nginx
 
 # Website URL, i.e. 'example.com'
 nx_hostname: SetMe
+
+# The nginx content, the website's 'index.html'
+nx_content: |
+  <html>
+    <body>
+      <p style="text-align: center;">
+        <span style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Sorry</span>
+        but this website is temporarily out of service
+      </p>
+    </body>
+  </html>
