--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -20,18 +20,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.8'
+        python-version: '3.11'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        pip install --upgrade pip
         pip install -r build-requirements.txt
         pip install -r requirements.txt
     - name: Lint
       run: |
         yamllint .
         find . -type f -name '*.yaml.j2' -exec yamllint {} +
-        ansible-lint
